NewModuleTest passes